# vdfcontest2results

./: README.md
nemo1369/track1/: install.sh  readme.md  run.sh
nemo1369/track1/libs/vdf/include/nil/crypto3/vdf/: chia.hpp  pietrzak.hpp  wesolowski.hpp
nemo1369/track1/libs/vdf/include/nil/crypto3/vdf/detail/: chia_functions.hpp  chia_policy.hpp  pietrzak_functions.hpp
nemo1369/track1/libs/vdf/include/nil/crypto3/vdf/detail/vpmadd/: avx512_mul1024.s  avx512_mul2048.s  avx512_mul3072.s  avx512_mul4096.s  vpmadd_mul1024.s  vpmadd_mul2048.s  vpmadd_mul3072.s  vpmadd_mul4096.s
nemo1369/track1/libs/vdf/test/: pietrzak.cpp
nemo1369/track2/: CMakeLists.txt  install.sh
nemo1369/track2/libs/vdf/: CMakeLists.txt
nemo1369/track2/libs/vdf/include/nil/crypto3/vdf/algorithm/: compute.hpp  verify.hpp
nemo1369/track2/libs/vdf/include/nil/crypto3/vdf/detail/: wesolowski_functions.hpp
nemo1369/track2/libs/vdf/include/nil/crypto3/vdf/detail/vpmadd/: avxmul.hpp
nemo1369/track2/libs/vdf/test/: chia.cpp  wesolowski.cpp
nemo1369/track2/src/: main.cpp
pulledpork/track1/: README.md  info.txt  install.sh  test.sh
pulledpork/track2/: README.md  install.sh  run.sh  vdf.cpp
pulledpork/track2/notes/: mpir_issue.txt  mpir_options.txt  test_machine.txt  timing.txt
pulledpork/track2/notes/iaca/: Makefile  haswell_add_n.as  iaca.inc  patch1_add_n.as  skylake_add_n.as
pulmark/track1/: Composer.h  README.md  VdfFormGmp.h  VdfFormGmpNudupl.h  install.sh  main.cpp
pulmark/track2/: README.md  VdfFormAntic.h  gmp.h  install.sh  main.cpp
sundersoft/entry/: asm_base.h  asm_gcd_128.h  asm_gcd_base_continued_fractions.h  asm_gcd_base_divide_table.h  asm_gcd_unsigned.h  asm_types.h  asm_vm.h  install_child.sh  threading.h  vdf.cpp  vdf_fast.h
